[gd_scene load_steps=3 format=3 uid="uid://b2t7l3mtdpatn"]

[ext_resource type="Script" uid="uid://bwkoinuuh1keh" path="res://scripts/ui/LapTimerUI.gd" id="1_h6a12"]
[ext_resource type="FontFile" uid="uid://bt7bwpk5kweam" path="res://Assets/ui/fonts/PressStart2P-Regular.ttf" id="2_60eqd"]

[node name="LapTimerUI" type="CanvasLayer"]
script = ExtResource("1_h6a12")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="CurrentTimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_60eqd")
theme_override_font_sizes/font_size = 24
text = "Current: 0:00.000"

[node name="LastTimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_60eqd")
text = "Last: --:--.---"

[node name="BestTimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_60eqd")
text = "Best: --:--,---"
